-- V21__update_comments_table.sql, -- V20__update_posts_status_constraint.sql -- V19__Add_public_id_to_posts.sql V22__Add_replies_to_comments -- V23__change_phone_number_length.sql  update webConfig, postController, TagController,